--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "vue": "^2.5.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
-    "vuefire": "^1.4.4"
+    "vuefire": "^1.4.4",
+    "auth0-js": "^8.6.0",
+    "auth0-lock": "^10.14.0",
+    "axios": "^0.16.1",
+    "jwt-decode": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
